--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -30,8 +31,55 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <section id="hour-nine" class="row time-block">
+        <div class="col-md-1 hour">9AM</div>
+        <textarea class="col-md-10 information"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fa fa-save" style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-ten" class="row time-block">
+        <div class="col-md-1 hour">10AM</div>
+        <textarea class="col-md-10 information"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fa fa-save" style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-eleven" class="row time-block">
+        <div class="col-md-1 hour">11AM</div>
+        <textarea class="col-md-10 information"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fa fa-save" style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-twelve" class="row time-block">
+        <div class="col-md-1 hour">12PM</div>
+        <textarea class="col-md-10 information"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fa fa-save" style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-thirteen" class="row time-block">
+        <div class="col-md-1 hour">1PM</div>
+        <textarea class="col-md-10 information"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fa fa-save" style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-fourteen" class="row time-block">
+        <div class="col-md-1 hour">2PM</div>
+        <textarea class="col-md-10 information"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fa fa-save" style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-fifteen" class="row time-block">
+        <div class="col-md-1 hour">3PM</div>
+        <textarea class="col-md-10 information"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fa fa-save" style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-sixteen" class="row time-block">
+        <div class="col-md-1 hour">4PM</div>
+        <textarea class="col-md-10 information"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fa fa-save" style="font-size:36px;"></i></button>
+      </section>
+      <section id="hour-seventeen" class="row time-block">
+        <div class="col-md-1 hour">5PM</div>
+        <textarea class="col-md-10 information"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fa fa-save" style="font-size:36px;"></i></button>
+      </section>
     </div>
-
+    <footer>
+      <h2>Made for the Students of the UCF Bootcamp Spring 2022</h2>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
